--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-# To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
+scikit-learn>=1.0.0
+pandas>=1.3
+scipy>=1.7
+numpy>=1.22.2
+spacy>=3.4.4
+matplotlib>=3.6.3
